--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -41,6 +41,7 @@
 @import "components/audio";
 @import "components/adaptive";
 @import "components/captions-settings";
+@import "components/title-bar";
 
 @import "print";
 
